--- a/intro/pubspec.yaml
+++ b/intro/pubspec.yaml
@@ -23,12 +23,18 @@ dependencies:
   flutter_inappwebview: ^5.8.0 # 다음 주소 검색 (웹뷰)
   intl: ^0.19.0 # DateFormat
   flutter_hooks: ^0.20.5
+  riverpod_annotation: ^2.3.5
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+  custom_lint: ^0.6.4
+  riverpod_lint: ^2.3.10
+  build_runner: ^2.4.11
+  riverpod_generator: ^2.4.0
 
 flutter:
   assets:
