--- a/intro/pubspec.yaml
+++ b/intro/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_hooks: ^0.20.5
   riverpod_annotation: ^2.3.5
   flutter_riverpod: ^2.5.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
