--- a/intro/pubspec.yaml
+++ b/intro/pubspec.yaml
@@ -14,18 +14,11 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
-  supabase_flutter: ^2.5.11 # supabase
-  image_picker: ^1.1.2 # image data
-  flutter_naver_map: ^1.2.3+1 # naver map
-  geolocator: ^12.0.0 # 주소 <-> 위경도 변환
-  http: ^1.2.2 # http 요청 통신
-  daum_postcode_search: ^0.0.2 # 다음 주소 검색
-  flutter_inappwebview: ^5.8.0 # 다음 주소 검색 (웹뷰)
-  intl: ^0.19.0 # DateFormat
-  flutter_hooks: ^0.20.5
   riverpod_annotation: ^2.3.5
   flutter_riverpod: ^2.5.1
   equatable: ^2.0.5
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +29,8 @@ dev_dependencies:
   riverpod_lint: ^2.3.10
   build_runner: ^2.4.11
   riverpod_generator: ^2.4.0
+  freezed: ^2.4.5
+  json_serializable: ^6.7.1
 
 flutter:
   assets:
